Fix x-axis text to be center-aligned

--- a/src/scss/charts.scss
+++ b/src/scss/charts.scss
@@ -171,6 +171,7 @@
     white-space: nowrap;
     margin-left: 3px;
     bottom: -10px;
+    text-anchor: middle;
     left: -12px;
   }
 }
